# ebbrt-contrib

./: README.md  ZKGlobalIdMap.cc  ZKGlobalIdMap.h
apps/: Makefile
apps/.template/helloworld/: CMakeLists.txt
apps/.template/helloworld/src/: StaticEbbIds.h
apps/contexts/: CMakeLists.txt
apps/contexts/src/: StaticEbbIds.h
apps/contexts/src/baremetal/: Printer.h  contexts.cc  ebbrtcfg.h
apps/contexts/src/hosted/: Printer.h  contexts.cc
apps/count/baremetal/src/: Printer.h  count.cc  ebbrtcfg.h
apps/count/hosted/src/: Printer.h  count.cc
apps/crtp/: CMakeLists.txt
apps/crtp/src/: CRTP.cc  CRTP.h  Counter.cc  Counter.h  StaticEbbIds.h
apps/crtp/src/baremetal/: Printer.h  crtp.cc  ebbrtcfg.h
apps/crtp/src/hosted/: Printer.h  crtp.cc
apps/crtpcount/: CMakeLists.txt
apps/crtpcount/src/: Counter.cc  Counter.h  StaticEbbIds.h
apps/crtpcount/src/baremetal/: Printer.h  crtpcount.cc  ebbrtcfg.h
apps/crtpcount/src/hosted/: Printer.h  crtpcount.cc
apps/helloworld/: CMakeLists.txt  Makefile
apps/helloworld_dpdk/: CMakeLists.txt
apps/helloworld_dpdk/src/hosted/: helloworld.cc
apps/hostedtmr/baremetal/src/: Printer.h  ebbrtcfg.h  hostedtmr.cc
apps/hostedtmr/hosted/src/: Printer.h  hostedtmr.cc
apps/hostedtmr/src/: MyTimer.h  StaticEbbIds.h
apps/iocmd/baremetal/src/: Printer.cc  ebbrtcfg.h  iocmd.cc
apps/iocmd/hosted/src/: Printer.h  iocmd.cc
apps/iocmd/src/: StaticEbbIds.h
apps/iperf/: CMakeLists.txt
apps/iperf/src/: iperf.cpp
apps/iperf/src/hosted/: .iperf.cc.swp
apps/iperfpv/baremetal/src/: Printer.h  ebbrtcfg.h  iperfpv.cc
apps/iperfpv/hosted/src/: Printer.h  iperfpv.cc
apps/iperfpv/src/: StaticEbbIds.h
apps/loopback/: CMakeLists.txt
apps/loopback/src/: LoEth.cc  LoEth.h  loopback.cc
apps/mapreduce/baremetal/src/: Printer.h  ebbrtcfg.h  mapreduce.cc
apps/mapreduce/ext/mapreduce/: mapreduce.hpp
apps/mapreduce/hosted/src/: Printer.h  mapreduce.cc
apps/mapreduce/src/: StaticEbbIds.h
apps/memcached/bm/src/: Memcached.cc  Memcached.h  app.cpp  protocol_binary.h
apps/memcached/fe/simple-client/: mctest.py
apps/msgtst/baremetal/: .gitignore
apps/msgtst/baremetal/src/: ebbrtcfg.h
apps/msgtst/hosted/: .gitignore
apps/msgtst/hosted/src/: msgtst.cc
apps/msgtst/src/: MsgTst.cc  MsgTst.h
apps/msgtst/src/hosted/: msgtst.cc
apps/multicore/: CMakeLists.txt
apps/multicore/src/: Counter.cc  Counter.h  MulticoreEbb.h  StaticEbbIds.h
apps/multicore/src/baremetal/: Printer.h  ebbrtcfg.h  multicore.cc
apps/multicore/src/hosted/: Printer.h  multicore.cc
apps/netpipe/baremetal/src/: Netpipe.cc  Printer.h  ebbrtcfg.h
apps/netpipe/hosted/src/: Printer.h  netpipe.cc
apps/netpipe/src/: StaticEbbIds.h
apps/netpipek/: CMakeLists.txt
apps/netpipek/src/: netpipek.cc
apps/poly/baremetal/src/: Poly.h  Printer.h  ebbrtcfg.h  poly.cc
apps/poly/hosted/src/: Printer.h  poly.cc
apps/poly/src/: StaticEbbIds.h
apps/sanity/: perf_run
apps/sanity/baremetal/src/: CpuAsm.h  Perf.cc  Perf.h  Printer.h  Profiler.h  ebbrtcfg.h  sanity.cc
apps/sanity/hosted/src/: Printer.h  sanity.cc
apps/sanity/src/: StaticEbbIds.h
apps/socket/baremetal/src/: NetConn.cc  Printer.h  Socket.cc  SocketManager.cc  SocketManager.h  Vfs.cc  Vfs.h  ZooKeeper.cc  ZooKeeper.h  ebbrtcfg.h  lwip_socket_api.cc  lwipopts.h  socket.cc  zk_config.h  zk_kludge.h
apps/socket/hosted/src/: Printer.h  socket.cc
apps/socket/src/: StaticEbbIds.h
apps/socket_demo/: CMakeLists.txt
apps/socket_demo/src/: StaticEbbIds.h
apps/socket_demo/src/baremetal/: Printer.h  ebbrtcfg.h  socket_demo.cc
apps/socket_demo/src/hosted/: Printer.h  socket_demo.cc
apps/stress_spawn/: CMakeLists.txt
apps/stress_spawn/src/: StaticEbbIds.h
apps/stress_spawn/src/baremetal/: Printer.h  ebbrtcfg.h  stress_spawn.cc
apps/stress_spawn/src/hosted/: Printer.h  stress_spawn.cc
apps/trace/baremetal/src/: Printer.h  ebbrtcfg.h  trace.cc
apps/trace/hosted/src/: Printer.h  trace.cc
apps/trace/src/: StaticEbbIds.h
apps/weaksym/: CMakeLists.txt
apps/weaksym/src/: .ZKGlobalIdMap.cc.swp  .ZKGlobalIdMap.h.swp  StaticEbbIds.h  ZKGlobalIdMap.cc  ZKGlobalIdMap.h
apps/weaksym/src/baremetal/: .weaksym.cc.swp  CustomGlobalIdMap.cc.bak  CustomGlobalIdMap.h.bak  Printer.h  ebbrtcfg.h  weaksym.cc
apps/weaksym/src/hosted/: Printer.h  weaksym.cc
apps/zk/baremetal/src/: Printer.cc  (+7 more)
apps/zk/src/: StaticEbbIds.h
apps/zkdemo/: CMakeLists.txt
apps/zkdemo/src/: StaticEbbIds.h  ZKGlobalIdMap.cc  ZKGlobalIdMap.h
apps/zkdemo/src/baremetal/: Printer.h  ebbrtcfg.h  zkdemo.cc
apps/zkdemo/src/hosted/: Printer.h  zkdemo.cc
docker/base/: Dockerfile  Makefile  startvm
docker/hosted/: centos7.Dockerfile
docker/hw/: Dockerfile
docs/: salt-moc.md
libraries/include/: SocketManager.h
libraries/socket-api/: build.mk
libraries/socket-api/include/: SocketManager.h  Vfs.h
libraries/socket/include/: SocketManager.h  Vfs.h
libraries/socket/src/: SocketApi.cc  SocketManager.cc
libraries/src/: SocketApi.cc  SocketManager.cc  ZooKeeper.cc
libraries/zookeeper/: build.mk  hosted.mk
libraries/zookeeper/include/: ZooKeeper.h
libraries/zookeeper/src/: ZooKeeper.cc  ZooKeeper.h
scripts/: alarm  batchmemaslap.py  ebbrt-update-copyright  getstats.py  linegrapher  run-mutilate
scripts/don/: bridge-init  disable-cores  enable-cores  kexec-to-don  kexec-to-don-exp  kexec-to-don-quad  kexec-to-kh  kexec-to-mcd  kh-init  osv-bridge-init  osv1core  osv4core  qemu1core  qemu4core  qemu6core  reboot-don  set_irq_affinity.sh  set_irq_affinity_virtio.sh
scripts/memcached-benchmarks/: memaslap.py
scripts/moc-haas/: run-mutilate  start
scripts/nod/: batch-run  bridge-init  qemu1core  qemu1core-debug  qemu1core-interactive  run-mutilate
scripts/osdi14/: colgraphs.py  memaslap.py  prependtitle.py
scripts/sosp15/: EbbRTDonTest  LinuxDonTest  Memcached_EbbRT  Memcached_Ebbrt  Memcached_Linux  Memcached_Native  Memcached_OSV  Memcached_RunAllTests  Netpipe_Ebbrt  Netpipe_Linux  NodeJs_HTTP_EbbRT  NodeJs_V8_EbbRT  NodeJs_V8_Linux
sysroot/: Makefile
work/cmake/tutorial/: tutorial.cxx
(+47 files in other folders)
