project("memcached-ebbrt" CXX)
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g3")
set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE        "-O4 -flto -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g3")
set(BAREMETAL_SOURCES src/iperf.cpp)
set(BAREMETAL_INCLUDES src/)
if( ${CMAKE_SYSTEM_NAME} STREQUAL "EbbRT")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14 -Wall -Werror")
  include_directories(/src)
  add_executable(iperf.elf src/iperf.cpp)
  add_custom_command(TARGET iperf.elf POST_BUILD 
    COMMAND objcopy -O elf32-i386 iperf.elf iperf.elf32 )
else()
  message(FATAL_ERROR "System name unsupported: ${CMAKE_SYSTEM_NAME}")
endif()
